--- a/style11.css
+++ b/style11.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background: #f0f2f5;
+    background: #ebebe6;
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #fff;
+    background: #542a7e;
     padding: 14px 32px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.04);
     position: sticky;
@@ -16,7 +16,7 @@ header {
 }
 
 .logo {
-    color: #1877f2;
+    color: #fbfafa;
     font-size: 32px;
     font-weight: bold;
     font-family: 'Segoe UI', Arial, sans-serif;
@@ -27,7 +27,7 @@ header {
     max-width: 280px;
     padding: 8px 12px;
     border-radius: 6px;
-    border: 1px solid #dddfe2;
+    border: 1px solid #0a0d11;
     margin: 0 18px;
 }
 
@@ -38,14 +38,14 @@ nav {
 }
 
 .nav-link {
-    color: #65676b;
+    color: #fafafb;
     text-decoration: none;
     font-size: 16px;
 }
 
 .login-btn {
-    background: #1877f2;
-    color: #fff;
+    background: rgb(123, 103, 180);
+    color: #ffffff;
     border: none;
     padding: 10px 22px;
     border-radius: 6px;
@@ -56,13 +56,13 @@ nav {
 }
 
 .login-btn:hover {
-    background: #145db2;
+    background: rgb(9, 13, 73);
 }
 .postbutton:hover {
-    background-color: #145db2;
+    background-color: rgb(9, 13, 73);
 }
 .requestbtn:hover {
-    background-color: rgb(56, 90, 6);
+    background-color: rgb(9, 13, 73);
 }
 
 .container {
@@ -90,7 +90,7 @@ nav {
 }
 
 .sidebar a {
-    color: #1877f2;
+    color: #302779;
     text-decoration: none;
     font-size: 16px;
 }
@@ -102,7 +102,7 @@ nav {
 }
 
 .create-post {
-    background: #fff;
+    background: #d7d7dd;
     padding: 18px 14px;
     border-radius: 8px;
     margin-bottom: 22px;
@@ -124,7 +124,7 @@ nav {
 
 .create-post button {
     align-self: flex-end;
-    background: #1877f2;
+    background: rgb(54, 60, 171);
     color: #fff;
     border: none;
     padding: 8px 22px;
@@ -193,7 +193,7 @@ nav {
 .section h3 {
     font-size: 17px;
     margin-bottom: 12px;
-    color: #1877f2;
+    color: #287ce9;
 }
 
 .friend-suggestion {
@@ -204,7 +204,7 @@ nav {
 }
 
 .friend-suggestion button {
-    background: #42b72a;
+    background: rgb(54, 60, 171);
     color: #fff;
     border: none;
     border-radius: 6px;
